--- a/services/common/utils/package.json
+++ b/services/common/utils/package.json
@@ -2,8 +2,7 @@
   "name": "@common/utils",
   "version": "1.0.0",
   "scripts": {
-    "tsc": "node ../../../node_modules/typescript/bin/tsc --build && ../../../node_modules/typescript/bin/tsc --noEmit",
-    "test":"ndoe ../../../node_modules/jest/bin/jest.js"
+    "tsc": "node ../../../node_modules/typescript/bin/tsc --build && node ../../../node_modules/typescript/bin/tsc --noEmit"
   },
   "keywords": [],
   "author": "",
